# python-todolist-cli

./: README.md  pyproject.toml
r_todolist/: main.py
